maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: expected class or object definition
def suivremur()={
^PledgeMaze:38: error: Unmatched closing brace '}' ignored here
}
^